Version 1.0-rc1-devel - development

Version 1.0-rc1 - Release Candidate 1, 11 November 2016
    - Slight performance improvements (lambda workers do not capture by value
        anymore)
    - API change in "classes/exception.h": now all Quantum++ exceptions have
        their own type, being derived from the base exception class
        qpp::exception::Exception. All exception classes are now in their
        separate namespace qpp::exception.

Version 1.0.0-beta4 - 2 November 2016
    - Added new functions in "classes/states.h":
        qpp::States::zero()  - zero state of n qudits
        qpp::States::one()   - one state of n qudits
        qpp::States::jn()    - |jj...j> state of n qudits
        qpp::States::plus()  - plus state of n qubits
        qpp::States::minus() - minus state of n qubits
    - Corrected qpp::is_matrix_expression<> type trait so now it works fine
        Thanks to @davidhigh http://stackoverflow.com/a/40293333/3093378
    - Fixed bug in qpp::cor()
    - Renamed qpp::loadMATLABmatrix() and saveMATLABmatrix() to 
        qpp::loadMATLAB() and qpp::saveMATLAB(), respectively. Slightly 
        changed their implementation so now one can load/save any Eigen type,
        similarly to qpp::load() and qpp::save().
    - Almost full code coverage via unit testing

Version 1.0.0-beta3 - 22 October 2016
    - Added support for Travis CI automated testing platform
    - Added new functions in "classes/states.h":
        qpp::States::mes() - maximally entangled state of 2 qudits
    - Added new functions in "random.h":
        qpp::randprob() - random probability vector uniformly distributed over
                          the probability simplex

Version 1.0.0-beta2 - 13 October 2016
    - Updated to GoogleTest 1.8.0 for unit testing
    - Added d = 2 overloads for all functions that take a list of dimensions
      as one of their arguments
    - Additional code sanitizing and unit testing

Version 1.0.0-beta1 - 10 October 2016