@@ -1,5 +1,6 @@
 // Used for testing, do not use it as an example
 #include <iostream>
+#include <fstream>
 #include "qpp.h"
 #include "experimental/experimental.h"
 
@@ -20,4 +21,18 @@ int main()
         std::cout << e.what() << '\n';
         std::cout << "Exception type: " << e.type_description() << '\n';
     };
+
+
+    for (idx i = 0; i < 10; ++i)
+    {
+        std::cout << rand(bigint(0), 10) << " ";
+    }
+    std::cout << '\n';
+
+    std::ifstream fout("prng_state.txt");
+    rdevs.load(fout);
+    for (idx i = 0; i < 10; ++i)
+    {
+        std::cout << rand((bigint) 0, 100) << " ";
+    }
 }
