@@ -270,7 +270,7 @@ measure(const Eigen::MatrixBase<Derived>& A, const std::vector<cmat>& Ks)
     // sample from the probability distribution
     std::discrete_distribution<idx> dd(std::begin(prob),
                                        std::end(prob));
-    idx result = dd(RandomDevices::get_instance().rng_);
+    idx result = dd(RandomDevices::get_instance().get_prng());
 
     return std::make_tuple(result, prob, outstates);
 }
@@ -440,7 +440,7 @@ measure(const Eigen::MatrixBase<Derived>& A,
     // sample from the probability distribution
     std::discrete_distribution<idx> dd(std::begin(prob),
                                        std::end(prob));
-    idx result = dd(RandomDevices::get_instance().rng_);
+    idx result = dd(RandomDevices::get_instance().get_prng());
 
     return std::make_tuple(result, prob, outstates);
 }
@@ -640,7 +640,7 @@ measure(const Eigen::MatrixBase<Derived>& A,
         // sample from the probability distribution
         std::discrete_distribution<idx> dd(std::begin(prob),
                                            std::end(prob));
-        idx result = dd(RandomDevices::get_instance().rng_);
+        idx result = dd(RandomDevices::get_instance().get_prng());
 
         return std::make_tuple(result, prob, outstates);
     }
